# Feldrand

./: CMakeLists.txt  README  README.md  TODO
cmake/modules/: FindCLEW.cmake
include/: config.hpp.in
include/OpenClHelper/: CLArrayFloat.h  CLArrayInt.h  CLKernel.h  OpenCLHelper.h
include/core/: BGK_OCL.hpp  Grid.hpp  MRT_LBM.hpp  Simulation.hpp  SimulationImplementation.hpp  SimulationUtilities.hpp  Vec2D.hpp
include/gui/: AboutWindow.hpp  MainWindow.hpp  OpenGLWidget.hpp
include/visualisation/: DrawArrows.hpp  DrawArrowsImplementation.hpp  DrawLIC.hpp  DrawLICImplementation.hpp  DrawPlain.hpp  DrawPlainImplementation.hpp  DrawStreamlines.hpp  DrawStreamlinesImplementation.hpp  DrawingRoutine.hpp  DrawingRoutineImplementation.hpp
src/: CMakeLists.txt
src/core/: BGK_OCL.cpp  CMakeLists.txt  MRT_LBM.cpp  Simulation.cpp  SimulationImplementation.cpp  SimulationUtilities.cpp  getDensity.cl  getVelocity.cl  lodepng.cc  simulationStep.cl
src/gui/: AboutWindow.cpp  CMakeLists.txt  MainWindow.cpp  OpenGLWidget.cpp  feldrand_gui.qrc  main.cpp
src/visualisation/: CMakeLists.txt  DrawArrows.cpp  DrawArrowsImplementation.cpp  DrawLIC.cpp  DrawLICImplementation.cpp  DrawPlain.cpp  DrawPlainImplementation.cpp  DrawStreamlines.cpp  DrawStreamlinesImplementation.cpp  DrawingRoutine.cpp  DrawingRoutineImplementation.cpp
